<?xml version="1.0"?>
<package>
  <name>rgb_lights_manager</name>
  <version>0.0.0</version>
  <description>Manages the RGB lights</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>amigo_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>smach_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>amigo_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>smach_msgs</run_depend>

</package>
