<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rgb_lights_manager</name>
  <version>0.0.0</version>
  <description>Manages the RGB lights</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>smach_msgs</build_depend>
  <build_depend>tue_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>smach_msgs</exec_depend>
  <exec_depend>tue_msgs</exec_depend>

</package>
